--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
- <title>Man City Fan Page </title>
+ <title color = "white">Man City Fan Page </title>
 
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
@@ -13,7 +13,7 @@
  
 <img src="logo.png" align="left" width="140" height="139"/>
 
- <h1 color="black" align="center" style="padding-left:20px;"><em> Manchester City Fan Page </em></h1> 
+ <h1 color="white" align="center" style="padding-left:20px;"><em> Manchester City Fan Page </em></h1> 
 
  </div>
 <div id="banner">
